Set min-width for main container to prevent elements from wrapping in narrow page

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -2525,6 +2525,7 @@ width: 100%;
 
 #inner-container {
 width: 85%;
+min-width: 950px;
 margin: 10px auto;
 padding: 0 10px 10px 10px;
 background-color: white;
